Fix primary nav items spacing on desktop

--- a/content/Assets/Styles/components/nav/_primary.scss
+++ b/content/Assets/Styles/components/nav/_primary.scss
@@ -8,5 +8,9 @@
 .nav--primary {
     .nav__item a {
         @include content-gutter(); /* 1. */
+
+        @include mq($from: tablet) {
+            padding: $nav-anchor-padding-tablet;
+        }
     }
  }
